crates/fastmcp/tests/trybuild/resource_param_not_in_template.rs
// Tests that #[resource] with a parameter not in the URI template produces a compile error.

use fastmcp::resource;

#[resource(uri = "file://{path}")]
fn my_resource(path: String, extra: String) -> String {
    format!("{path}/{extra}")
}

fn main() {}
